# MoneyRadar

./: .dockerignore  .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CODE_REVIEW.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  QUICKSTART_UI.md  README.md  SECURITY.md  UI_FEATURE_SHOWCASE.md  UI_IMPLEMENTATION_SUMMARY.md  USAGE.md  docker-compose.yml  init_db.py  pyproject.toml  requirements.txt  setup.py  start-dev.ps1  start-dev.sh
.github/workflows/: ci.yml
examples/: full_analysis.py  pricing_experiment.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: Card.jsx  ErrorMessage.jsx  Layout.jsx  LoadingSpinner.jsx  StatCard.jsx
frontend/src/hooks/: useApi.js
frontend/src/pages/: Alerts.jsx  Customers.jsx  Dashboard.jsx  Experiments.jsx  Mismatches.jsx  Revenue.jsx
monetization_engine/: __init__.py  cli.py  config.py  database.py  logging_config.py  migrations.py
monetization_engine/analysis/: __init__.py  __init__.py.bak  expansion_scorer.py  mismatch_detector.py  risk_detection.py  risk_detector.py
monetization_engine/api/: app.py  app.py.bak
monetization_engine/api/routes/: __init__.py  admin.py  alerts.py  analysis.py  customers.py  experiments.py  revenue.py  webhooks.py
monetization_engine/experiments/: __init__.py
monetization_engine/ingestion/: __init__.py  usage.py
monetization_engine/models/: __init__.py  __init__.py.bak  alert.py  customer_score.py  experiment.py  product.py  subscription.py  usage.py
tests/: conftest.py  test_api.py  test_cli.py  test_experiments.py  test_ingestion.py  test_mismatch.py  test_risk_detection.py
